Ingress/deployment-apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: my-namespace
  labels:
    app: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache-pod
      namespace: my-namespace
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd:2.4
        ports:
        - containerPort: 80
