Ingress/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: my-namespace
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
      app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
